 /* $Id: ChangeLog,v 1.860 2000-04-02 14:52:23 sandervl Exp $ */

 2000-04-02: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: dc.cpp cleanup
	- GDI32:  Dib section sync bugfix (todo: rgb 565 to 555 conversion if bpp == 16)
                  Set y inversion to 0 if dib section isn't flipped
                  (fixes upside down flash videos in RealPlayer 7)
	- WINMM:  Faked mixer apis

 2000-04-01: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Fixed dibsection bitblits. (wrong updates of realplayer 7
                 videos)

 2000-04-01: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: added WYSIWYGOFOA interface

 2000-04-01: Edgar Buerkle <Edgar.Buerkle@gmx.net>
        - USER32: Fixed track frame width & height (now you can actually
                  see the tracking frame when moving a window)

 2000-03-31: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: readded CS_HITTEST for HT_TRANSPARENT handling, transparent
		  tooltips are now supported
		  (why is HT_TRANSPARENT in the groupbox control commented out?)
	- COMCTL32: treeview: added TTF_TRANSPARENT tooltip style

 2000-03-30: Christoph Bratschi <cbratschi@datacomm.ch>
	- KERNEL32:
	- SHLWAPI: added stubs for explorer.exe
	- COMCTL32: treeview: finished info tip

 2000-03-30: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Also double thread stack in release build
                    (RealPlayer 7 runs out of stack sometimes)
	- WSOCK32:  Fixed bugs in WSAStartup/Cleanup & select (fixes Gnutella)

 2000-03-29: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Throw exception when critical section times out
	- USER32:   Fixed bugs in PeekMessageA/W (fixes connection failures
                    & hangs after warning dialogs in RealPlayer 7)
	- GDI32:    Check for NULL region in GetRgnBox; can cause a crash
                    in Open32

 2000-03-29: Christoph Bratschi <cbratschi@datacomm.ch>
	- KERNEL32: added FindFileFirstMultiA for internal usage
